--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
       </td>
     </tr>
   </table>
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&cl=ffffff&w=a">
-    
-  </script>
+  <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&cl=ffffff&w=a">
+
+  </script> -->
 </body>
 
 </html>
