--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
               <li>I play the <b>piano</b> 🎹 & very into classical music</li>
               <li>I love <b>Renaissance</b> art and <b>Surrealism</b>! During the pandemic I was admitted as a <a href="https://arthistory.hku.hk/index.php/academic-programmes/master-of-arts-in-art-history/">Master of Arts in Art History</a> at the <a href="https://www.hku.hk/">University of Hong Kong</a> (but didn't enrol cause I decided to be focused on my study of Computer Science first 👩‍💻)</li>
               <li>I learned my <b>Japanese</b> through Anime (<a href="https://www.netflix.com/title/70205012">NARUTO</a> is my favorite 🔥)</li>
-              <li>Je parle un peu français (a beginner who likes to say Je ne sais pas) 🧐 </li>
+              <li>Je parle un peu <b>français</b> (a beginner who likes to say Je ne sais pas) 🧐 </li>
               </ul>
             </td>
           </tr>
