--- a/index.html
+++ b/index.html
@@ -422,17 +422,17 @@
       </td>
     </tr>
   </table>
-  <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&cl=ffffff&w=a">
-  </script> -->
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&cl=ffffff&w=a">
+  </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XDES9G4ED2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XDES9G4ED2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-XDES9G4ED2');
-</script>
+    gtag('config', 'G-XDES9G4ED2');
+  </script>
 </body>
 
 </html>
