--- a/index.html
+++ b/index.html
@@ -422,8 +422,10 @@
       </td>
     </tr>
   </table>
+  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
   <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&cl=ffffff&w=a">
-  </script>
+  </script></tbody></table>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XDES9G4ED2"></script>
   <script>
