--- a/index.html
+++ b/index.html
@@ -422,9 +422,8 @@
       </td>
     </tr>
   </table>
-  <table width="50%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&cl=ffffff&w=a">
-  </script></tbody></table>
+
+  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=100&t=n&d=thMjNOKpOYN-BfENEOsmSjlm2NasTlRcMWsyqX5vW1I&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XDES9G4ED2"></script>
