--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="Home">
   <header id="nav-wrapper">
     <nav class="navbar navbar-expand-md navbar-custom fixed-top bg-dark" id="Home" data-scroll-id="Home" tabindex="-1" style="outline: none;">
-      <a href="#Home" class="nav-link active"><span class="nav-link-span"><span class="u-nav"><b>Wenqi Jia</b></span></span></a>
+      <a href="#Home" class="nav-link active"><span class="nav-link-span"><span class="u-nav"><b>Home</b></span></span></a>
       <div class="collapse navbar-collapse" id="navbarToggle">
       <!-- <div class="nav right pull-right" style="float: right;"> -->
         <a href="#Research" class="nav-link"><span class="nav-link-span"><span class="u-nav"><b>Research</b></span></span></a>
@@ -130,7 +130,7 @@
               <!-- <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
               <a><font color="#ABB0B8">video</font></a> /
               <a><font color="#ABB0B8">bibtex</font></a>
-              <p></p>
+              <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
               <p></p>
             </td>
           </tr> 
