--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@
               <br>
               <em>IJCV</em>, 2021 &nbsp <font color=#FF8080><strong>(Special Issue)</strong></font> (under review)
               <br>
-              <a href="https://arxiv.org/abs/2111.12077">arXiv</a> /
-              <a href="https://github.com/jonbarron/hist_thresh">code</a> / 
-              <!-- <a href="https://www.youtube.com/watch?v=rHtQQlQo1Q4">video</a> /  -->
-              <a href="data/BarronECCV2020.bib">bibtex</a>
+              <a><font color="#ABB0B8">arXiv</font></a> /
+              <a><font color="#ABB0B8">code</font></a> /
+              <a><font color="#ABB0B8">bibtex</font></a>
               <br>
             </td>
           </tr>
