--- a/index.html
+++ b/index.html
@@ -382,14 +382,15 @@
               <ul>
               <li>Obviously I love travelling around the world: 🐱‍🚀 </li>
               <p>
-                <!-- <a href="https://www.html.cn/qa/html5/17938.html"><img src="country/cn.png" width="30" height="30" style="float:left"></a> -->
+                <!-- <a href="https://flagpedia.net/"><img src="country/cn.png" width="30" height="30" style="float:left"></a> -->
                 <img src="country/cn.png" width="30" height="30" style="float:left">
                 <img src="country/hk.png" width="30" height="30" style="float:left">
                 <img src="country/mo.png" width="30" height="30" style="float:left">
                 <img src="country/us.png" width="30" height="30" style="float:left">
-                <img src="country/sg.png" width="30" height="30" style="float:left">
                 <img src="country/kh.png" width="30" height="30" style="float:left">
+                <img src="country/sg.png" width="30" height="30" style="float:left">
                 <img src="country/my.png" width="30" height="30" style="float:left">
+                <img src="country/au.png" width="30" height="30" style="float:left">
                 <img src="country/fr.png" width="30" height="30" style="float:left">
                 <img src="country/lu.png" width="30" height="30" style="float:left">
                 <img src="country/dk.png" width="30" height="30" style="float:left">
