update index file

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                 <section id="Academic Service" style="padding-top: 80px; margin-top: -80px;">
                 <heading><b>Academic Service and Honor</b></heading>
                 <ul>
+                  <li><b>Reviewer</b>, ECCV 2022</li>
                   <li><b>Reviewer</b>, CVPR 2022</li>
                   <li><b>First Runner Up </b>🥈, IEEE Video and Image Processing Cup (VIP Cup) 2017</li>
                 </ul>
