--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
               <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech! 🐝🐝🐝 <br>
               <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br>
-              <b>03.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/">Ego4D</a> paper has been accepted by CVPR '22! 🥂<br>
+              <b>03.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/">Ego4D</a> paper has been accepted by CVPR '22 and selected for an oral presentation! 🥂<br>
             </p>
           </td>
         </tr>
@@ -164,7 +164,7 @@
               <br>
               <a href="https://www.cs.utexas.edu/users/grauman/">Kristen Grauman</a>, et al.
               <br>
-              <em>CVPR</em>, 2022
+              <em>CVPR</em>, 2022 &nbsp <font color=#FF8080><strong>(Oral)</strong></font>
               <!-- <em>ECCV</em>, 2020 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font> -->
               <br>
               <a href="https://ego4d-data.org/">project</a> /
