update meta info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="author" content="Wenqi Jia">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-
+  <meta property="og:site_name" content="Wenqi Jia" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Wenqi Jia"/>
+  <meta property="og:url" content="."/>
+  <meta property="og:description" content="Wenqi Jia"/>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="imgs/icon1.jpg">
 </head>
