--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta property="og:site_name" content="Wenqi Jia" />
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Wenqi Jia"/>
-  <meta property="og:url" content="."/>
-  <meta property="og:description" content="Wenqi Jia"/>
+  <meta property="og:url" content="https://vjwq.github.io/"/>
+  <meta property="og:description" content="PhD Student"/>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="imgs/icon1.jpg">
 </head>
