--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <heading><b>News</b></heading>
             <p>
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
+              <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br>
               <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech! 🐝🐝🐝 <br>
               <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br>
               <b>03.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/">Ego4D</a> paper has been accepted by CVPR '22 and selected for an oral presentation! 🥂<br>
