update eccv news

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <heading><b>News</b></heading>
             <p>
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
+              <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22 Hi Israel!! 🎉<br>
               <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br>
               <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech! 🐝🐝🐝 <br>
               <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br>
@@ -141,7 +142,7 @@
               <a href="https://aptx4869lm.github.io/">Miao Liu</a>,
               <a href="https://rehg.org/">James Rehg<sup>&dagger;</sup></a>
               <br>
-							<em>arXiv</em>, 2022 (under review)
+							<em>ECCV</em>, 2022
               <br>
               <!-- <a><font color="#ABB0B8">arXiv</font></a> / -->
               <a href="https://arxiv.org/abs/2203.11305">arXiv</a>&nbsp/&nbsp 
@@ -150,7 +151,8 @@
               <!-- <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
               <a><font color="#ABB0B8">video</font></a> /
               <a href="doc/EgoGan-ArXiv.bib">bibtex</a>
-              <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
+              <!-- <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p> -->
+              <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
               <p></p>
             </td>
           </tr> 
