update project page

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <br>
 							<em>ECCV</em>, 2022
               <br>
-              <a href="https://vjwq.github.io/EgoGAN/">project</a> /
+              <a href="https://vjwq.github.io/EgoGAN/">project page</a> /
               <a href="https://arxiv.org/abs/2203.11305">arXiv</a>&nbsp/&nbsp 
               <a><font color="#ABB0B8">code</font></a> /
               <a><font color="#ABB0B8">supplement</a> /
@@ -174,7 +174,7 @@
               <em>CVPR</em>, 2022 &nbsp <font color=#FF8080><strong>(Oral)</strong></font>
               <!-- <em>ECCV</em>, 2020 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font> -->
               <br>
-              <a href="https://ego4d-data.org/">project</a> /
+              <a href="https://ego4d-data.org/">project page</a> /
               <a href="https://arxiv.org/pdf/2110.07058.pdf">arXiv</a> /
               <a href="https://github.com/EGO4D">code</a> /
               <a href="https://ego4d-data.org/#download">dataset</a> /
