update project page

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <br>
 							<em>ECCV</em>, 2022
               <br>
-              <a href="https://vjwq.github.io/project/EgoGAN/index.html">project page</a> /
+              <a href="https://vjwq.github.io/EgoGAN/">project page</a> /
               <a href="https://arxiv.org/abs/2203.11305">arXiv</a>&nbsp/&nbsp 
               <a><font color="#ABB0B8">code</font></a> /
               <a><font color="#ABB0B8">supplement</a> /
