--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 							<em>ECCV</em>, 2022
               <br>
               <a href="https://vjwq.github.io/EgoGAN/">project page</a> /
-              <a href="https://arxiv.org/abs/2203.11305">arXiv</a>&nbsp/&nbsp 
-              <a><font color="#ABB0B8">code</font></a> /
-              <a><font color="#ABB0B8">supplement</a> /
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN.pdf">paper</a>&nbsp/&nbsp 
+              <a href="https://github.com/VJWQ/EgoGAN.git">code</a>&nbsp/&nbsp 
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN-supp.pdf">supplement</a> /
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN_video.mp4">video</a>&nbsp/&nbsp 
               <!-- <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
-              <a><font color="#ABB0B8">video</font></a> /
               <a href="doc/EgoGan-ArXiv.bib">bibtex</a>
               <!-- <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p> -->
               <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
@@ -175,7 +175,7 @@
               <!-- <em>ECCV</em>, 2020 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font> -->
               <br>
               <a href="https://ego4d-data.org/">project page</a> /
-              <a href="https://arxiv.org/pdf/2110.07058.pdf">arXiv</a> /
+              <a href="https://arxiv.org/pdf/2110.07058.pdf">paper</a> /
               <a href="https://github.com/EGO4D">code</a> /
               <a href="https://ego4d-data.org/#download">dataset</a> /
               <a href="https://drive.google.com/file/d/1oknfQIH9w1rXy6I1j5eUE6Cqh96UwZ4L/view?usp=sharing">video</a> /
