--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <heading><b>News</b></heading>
             <p>
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
-              <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22 Hi Israel!! 🎉<br>
+              <b>08.2022</b>&nbsp&nbsp One journal paper accepted by TNNLS! 🎉<br>
+              <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22 Hi Israel!! 🎉✡️<br>
               <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br>
               <b>04.2022</b>&nbsp&nbsp I've accepted my CS PhD offer at Georgia Tech! 🐝🐝🐝 <br>
               <b>04.2022</b>&nbsp&nbsp Our <a href="https://ego4d-data.org/docs/challenge/">Ego4D challenges</a> are alive now! Come join us on the leaderboard! 🏆🚩<br>
@@ -243,7 +244,7 @@
               <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Kin-Man Lam</a>,
               <a>Jun Kong</a>
               <br>
-							<em>arXiv</em>, 2021 (under review)
+							<em>TNNLS</em>, 2022
               <br>
               <a><font color="#ABB0B8">arXiv</font></a> /
               <a><font color="#ABB0B8">code</font></a> /
