--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <name><b>Wenqi Jia</b></name>
               </p>
               <heading>Hey! &#x1F60a</heading>
-              <p>I am a second-year master student in Computer Science at the 
+              <p>I am a first-year PhD student in Computer Science at the 
                 <a href="https://www.gatech.edu/">Georgia Institute of Technology (GaTech)</a> and currently working with 
                 <a href="https://rehg.org/">Prof. James Rehg</a>. I received my B.Eng from the 
                 <a href="https://www.polyu.edu.hk/">Hong Kong Polytechnic University</a>, majoring in Electronic and Information Engineering. I was working in
