update TNNLS paper info

--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
               <div><img src="imgs/tip.png" width="100%"></div>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
-              <a>
-                <papertitle>Holistic-guided Disentangled Learning with Cross-video Semantics Mining for Concurrent 
-                  First-Person and Third Person Activity Recognition</papertitle>
+              <a href="https://ieeexplore.ieee.org/document/9887964">
+                <papertitle><font color="#1772d0">Holistic-Guided Disentangled Learning With Cross-Video Semantics Mining for Concurrent 
+                  First-Person and Third-Person Activity Recognition</font></papertitle>
               </a>
               <br>
               <a>Tianshan Liu</a>,
@@ -246,10 +246,10 @@
               <br>
 							<em>TNNLS</em>, 2022
               <br>
-              <a><font color="#ABB0B8">arXiv</font></a> /
-              <a><font color="#ABB0B8">code</font></a> /
-              <a><font color="#ABB0B8">dataset</a> /
-              <a><font color="#ABB0B8">bibtex</font></a>
+              <a href="https://ieeexplore.ieee.org/document/9887964">paper</a> / 
+              <!-- <a><font color="#ABB0B8">code</font></a> /
+              <a><font color="#ABB0B8">dataset</a> / -->
+              <a href="doc/TNNLS2022.bib">bibtex</a>
               </td>
           </tr>
 
