--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <heading><b>News</b></heading>
             <p>
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
+              <b>10.2022</b>&nbsp&nbsp I'll give a talk at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
+              <b>09.2022</b>&nbsp&nbsp I'll give a talk at <a href="https://ego4d-data.org/workshops/eccv22/">2nd International Ego4D Workshop@ECCV 2022</a>, thanks for having me! 🫡<br>
               <b>08.2022</b>&nbsp&nbsp One journal paper accepted by TNNLS! 🎉<br>
               <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22 Hi Israel!! 🎉✡️<br>
               <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br>
@@ -341,6 +343,7 @@
                 <section id="Academic Service" style="padding-top: 80px; margin-top: -80px;">
                 <heading><b>Academic Service and Honor</b></heading>
                 <ul>
+                  <!-- <li><b>Talk</b> 🎤, HANDS@ECCV22 workshop, 2nd International Ego4D Workshop@ECCV 2022</li> -->
                   <li><b>Reviewer</b> 🔎, CVPR '22, ECCV '22 </li>
                   <!-- <li><b>Reviewer</b>, </li> -->
                   <li><b>First Runner Up</b> 🥈, IEEE Video and Image Processing Cup (VIP Cup) 2017</li>
