--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <heading><b>News</b></heading>
             <p>
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
+              <b>10.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
               <b>10.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
               <b>09.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://ego4d-data.org/workshops/eccv22/">2nd International Ego4D Workshop@ECCV 2022</a>, thanks for having me! 🫡<br>
               <b>08.2022</b>&nbsp&nbsp One journal paper accepted by TNNLS! 🎉<br>
