--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <heading><b>News</b></heading>
             <p>
               <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
+              <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br>
               <b>10.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
               <b>10.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
               <b>09.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://ego4d-data.org/workshops/eccv22/">2nd International Ego4D Workshop@ECCV 2022</a>, thanks for having me! 🫡<br>
@@ -430,6 +431,7 @@
                 <img src="country/de.png" width="30" height="30" style="float:left">
                 <img src="country/be.png" width="30" height="30" style="float:left">
                 <img src="country/es.png" width="30" height="30" style="float:left">
+                <img src="country/il.png" width="30" height="30" style="float:left">
               </p><br><br> 
               <li>I'm <b>Chinese</b> and if you wonder what's the correct pronunciation of my name (with the tones!), try to say the brand "<a href="https://www.google.com/search?q=givenchy+pronunciation+in+british+english">Givenchy</a>"in British accent 🤣</li>
               <li>I play the <b>piano</b> 🎹 & very into classical music</li>
