update egogan page

--- a/index.html
+++ b/index.html
@@ -149,11 +149,12 @@
               <br>
 							<em>ECCV</em>, 2022
               <br>
-              <a href="https://vjwq.github.io/EgoGAN/">project page</a> /
-              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN.pdf">paper</a>&nbsp/&nbsp 
+              <a href="https://vjwq.github.io/EgoGAN-page/">project page</a> /
+              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN.pdf">paper</a>&nbsp/&nbsp 
               <a href="https://github.com/VJWQ/EgoGAN.git">code</a>&nbsp/&nbsp 
-              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN-supp.pdf">supplement</a> /
-              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN_video.mp4">video</a>&nbsp/&nbsp 
+              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN-supp.pdf">supplement</a> /
+              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN_poster.pdf">poster</a> /
+              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN_video.mp4">video</a>&nbsp/&nbsp 
               <!-- <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
               <a href="doc/EgoGan-ArXiv.bib">bibtex</a>
               <!-- <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p> -->
