--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <br>
 							<em>ECCV</em>, 2022
               <br>
-              <a href="https://vjwq.github.io/EgoGAN-page/">project page</a> /
+              <a href="https://vjwq.github.io/EgoGAN-page/">project</a> /
               <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN.pdf">paper</a>&nbsp/&nbsp 
               <a href="https://github.com/VJWQ/EgoGAN.git">code</a>&nbsp/&nbsp 
               <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN-supp.pdf">supplement</a> /
@@ -180,7 +180,7 @@
               <em>CVPR</em>, 2022 &nbsp <font color=#FF8080><strong>(Oral)</strong></font>
               <!-- <em>ECCV</em>, 2020 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font> -->
               <br>
-              <a href="https://ego4d-data.org/">project page</a> /
+              <a href="https://ego4d-data.org/">project</a> /
               <a href="https://arxiv.org/pdf/2110.07058.pdf">paper</a> /
               <a href="https://github.com/EGO4D">code</a> /
               <a href="https://ego4d-data.org/#download">dataset</a> /
