--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
               <br>
 							<em>ECCV</em>, 2022
               <br>
-              <a href="https://vjwq.github.io/EgoGAN-page/">project</a> /
-              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN.pdf">paper</a>&nbsp/&nbsp 
+              <a href="https://vjwq.github.io/EgoGAN/">project</a> /
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN.pdf">paper</a>&nbsp/&nbsp 
               <a href="https://github.com/VJWQ/EgoGAN.git">code</a>&nbsp/&nbsp 
-              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN-supp.pdf">supplement</a> /
-              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN_poster.pdf">poster</a> /
-              <a href="https://vjwq.github.io/EgoGAN-page/assets/EgoGAN_video.mp4">video</a>&nbsp/&nbsp 
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN-supp.pdf">supplement</a> /
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN_poster.pdf">poster</a> /
+              <a href="https://vjwq.github.io/EgoGAN/assets/EgoGAN_video.mp4">video</a>&nbsp/&nbsp 
               <!-- <a href="https://youtu.be/zBSH-k9GbV4">video</a> -->
-              <a href="doc/EgoGan-ArXiv.bib">bibtex</a>
+              <a href="doc/EgoGan.bib">bibtex</a>
               <!-- <p><font color="#FF8080"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p> -->
               <p><font color="#009A17"><em>(&#8656 Move your cursor on the image for a short demo video!)</em></font></p>
               <p></p>
@@ -185,7 +185,7 @@
               <a href="https://github.com/EGO4D">code</a> /
               <a href="https://ego4d-data.org/#download">dataset</a> /
               <a href="https://drive.google.com/file/d/1oknfQIH9w1rXy6I1j5eUE6Cqh96UwZ4L/view?usp=sharing">video</a> /
-              <a href="doc/Ego4D-ArXiv.bib">bibtex</a>
+              <a href="doc/Ego4D.bib">bibtex</a>
               <br>
               <p></p>
               <p>
