--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               </p>
               <heading>Hey! &#x1F60a</heading>
               <p>I am a first-year PhD student in Computer Science at the 
-                <a href="https://www.gatech.edu/">Georgia Institute of Technology (GaTech)</a> and currently working with 
-                <a href="https://rehg.org/">Prof. James Rehg</a> and <a href="https://faculty.cc.gatech.edu/~danfei/">Prof. Danfei Xu</a>. I received my B.Eng from the 
+                <a href="https://www.gatech.edu/">Georgia Institute of Technology (GaTech)</a>, working with 
+                <a href="https://rehg.org/">Prof. James Rehg</a> and co-advised by <a href="https://faculty.cc.gatech.edu/~danfei/">Prof. Danfei Xu</a>. I received my B.Eng from the 
                 <a href="https://www.polyu.edu.hk/">Hong Kong Polytechnic University</a>, majoring in Electronic and Information Engineering. I was working in
                 <a href="https://www.polyu.edu.hk/eie/research/research-highlights/10-research/249-research-focus-area-details/#focus_area_ai_robotics">Signal Processing Lab</a> with 
                 <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Prof. Kin-Man Lam</a> as an undergraduate research assistant since my sophomore year. 
@@ -61,7 +61,7 @@
               </p>
             </td>
             <td style="padding:3%;width:40%;max-width:40%;border-radius:100%; overflow:hidden;">
-                <a href="imgs/frame30.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="imgs/frame30.jpg" class="hoverZoomLink"></a>
+                <a href="imgs/photo.jpg"><img style="width:80%;max-width:80%" alt="profile photo" src="imgs/photo.jpg" class="hoverZoomLink"></a>
               </td>
           </tr>
         </tbody></table>
