--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <heading><b>Academic Service and Honor</b></heading>
                 <ul>
                   <!-- <li><b>Talk</b> 🎤, HANDS@ECCV22 workshop, 2nd International Ego4D Workshop@ECCV 2022</li> -->
-                  <li><b>Reviewer</b> 🔎, CVPR '22, ECCV '22 </li>
+                  <li><b>Reviewer</b> 🔎, CVPR '22, '23, ECCV '22 </li>
                   <!-- <li><b>Reviewer</b>, </li> -->
                   <li><b>First Runner Up</b> 🥈, IEEE Video and Image Processing Cup (VIP Cup) 2017</li>
                 </ul>
