--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
               <heading><b>Publications</b></heading>
             </td>
           </tr>          
+          <!-- <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
+            <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
+  
+              <div class="one">
+                  <img src='imgs/ego4d.png'width="180%">
+              </div>
+            </td>
+            <td style="padding:20px;width:65%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2110.07058">
+                <papertitle>Ego4D: Around the World in 3,000 Hours of Egocentric Video</papertitle>
+              </a>
+              <br>
+              <a href="https://www.cs.utexas.edu/users/grauman/">Kristen Grauman</a>, et al.
+              <br>
+              <em>T-PAMI</em>, &nbsp <font color=#FF8080><strong>(Special Issue on Best of CVPR 2022)</strong></font> (under review)
+              <br>
+              <a href="https://ego4d-data.org/">project</a> /
+              <a href="https://arxiv.org/pdf/2110.07058.pdf">paper</a> /
+              <a href="doc/Ego4D.bib">bibtex</a>
+              <br>
+              <p></p>
+              <p>
+              </p>
+            </td>
+          </tr>  -->
           <!-- <tr onmouseout="mip360_stop()" onmouseover="mip360_start()" bgcolor="#ffffd0"> -->
           <tr onmouseout="mip360_stop()" onmouseover="mip360_start()">
               <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
