--- a/index.html
+++ b/index.html
@@ -114,7 +114,40 @@
               <section id="Publications" style="padding-top: 80px; margin-top: -80px;">
               <heading><b>Publications</b></heading>
             </td>
-          </tr>          
+          </tr>      
+          <!-- <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
+            <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
+  
+              <div class="one">
+                  <img src=''width="180%">
+              </div>
+            </td>
+            <td style="padding:20px;width:65%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2110.07058">
+                <papertitle>Werewolf Among Us: A Multimodal Dataset for Modeling Persuasion Behaviors in Social Deduction Games</papertitle>
+              </a>
+              <br>
+              <a href="https://bolinlai.github.io/">Bolin Lai</a>,
+              <a href="https://t.co/zOXcWW1aHS">Hongxin Zhang</a>,
+              <a href="https://aptx4869lm.github.io/">Miao Liu</a>,
+              <a>Aryan Pariani</a>,
+              <a href="https://fkryan.github.io/">Fiona Ryan</a>,
+              <br>
+              <strong>Wenqi Jia</strong>, 
+              <a href="https://rehg.org/">James Rehg<sup>&dagger;</sup></a>,
+              <a href="https://cs.stanford.edu/~diyiy/">Diyi Yang<sup>&dagger;</sup></a>
+              <br>
+              <em>ACL</em>, 2023 
+              <br>
+              <a href="https://persuasion-deductiongame.socialai-data.org">project</a> /
+              <a href="">paper</a> /
+              <a href="">bibtex</a>
+              <br>
+              <p></p>
+              <p>
+              </p>
+            </td>
+          </tr>      -->
           <!-- <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
@@ -123,17 +156,17 @@
               </div>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2110.07058">
+              <a href="">
                 <papertitle>Ego4D: Around the World in 3,000 Hours of Egocentric Video</papertitle>
               </a>
               <br>
-              <a href="https://www.cs.utexas.edu/users/grauman/">Kristen Grauman</a>, et al.
+              <a href="">Kristen Grauman</a>, et al.
               <br>
-              <em>T-PAMI</em>, &nbsp <font color=#FF8080><strong>(Special Issue on Best of CVPR 2022)</strong></font> (under review)
+              <em>T-PAMI</em>, 2023 &nbsp <font color=#FF8080><strong>(Special Issue on Best of CVPR 2022)</strong></font> (under review)
               <br>
-              <a href="https://ego4d-data.org/">project</a> /
-              <a href="https://arxiv.org/pdf/2110.07058.pdf">paper</a> /
-              <a href="doc/Ego4D.bib">bibtex</a>
+              <a href="">project</a> /
+              <a href="">paper</a> /
+              <a href="">bibtex</a>
               <br>
               <p></p>
               <p>
@@ -168,7 +201,7 @@
                 <papertitle><font color="#1772d0">Generative Adversarial Network for Future Hand Segmentation from Egocentric Video</font></papertitle>
               </a>
               <br>
-              <strong>Wenqi Jia<sup>*</sup></strong>,
+              <strong>Wenqi Jia</strong>,
               <a href="https://aptx4869lm.github.io/">Miao Liu</a>,
               <a href="https://rehg.org/">James Rehg<sup>&dagger;</sup></a>
               <br>
@@ -247,7 +280,7 @@
               <a>Xin Chen</a>,
               <a>Yun Zhang</a>,
               <a href="https://www.biostat.wisc.edu/~yli/">Yin Li</a>,
-              <a href="https://rehg.org/">James Rehg</a>
+              <a href="https://rehg.org/">James Rehg<sup>&dagger;</sup></a>
               <br>
               <em>IJCV</em>, 2021 &nbsp <font color=#FF8080><strong>(Special Issue)</strong></font> (under review)
               <br>
@@ -271,7 +304,7 @@
               <a>Tianshan Liu</a>,
               <strong>Wenqi Jia</strong>, 
               <a>Rui Zhao</a>,
-              <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Kin-Man Lam</a>,
+              <a href="http://www.eie.polyu.edu.hk/~enkmlam/">Kin-Man Lam<sup>&dagger;</sup></a>,
               <a>Jun Kong</a>
               <br>
 							<em>TNNLS</em>, 2022
