--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <!-- <b>05.2022</b>&nbsp&nbsp I'll be intern at <a></a> in summer 2022! <br> -->
+              <!-- <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br> -->
               <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br>
-              <b>10.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
-              <b>10.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
-              <b>09.2022</b>&nbsp&nbsp I'll give a poster presentation at <a href="https://ego4d-data.org/workshops/eccv22/">2nd International Ego4D Workshop@ECCV 2022</a>, thanks for having me! 🫡<br>
+              <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
+              <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/hands2022/home?authuser=0">HANDS@ECCV22 workshop</a>, thanks for having me! 🤓<br>
+              <b>09.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://ego4d-data.org/workshops/eccv22/">2nd International Ego4D Workshop@ECCV 2022</a>, thanks for having me! 🫡<br>
               <b>08.2022</b>&nbsp&nbsp One journal paper accepted by TNNLS! 🎉<br>
               <b>07.2022</b>&nbsp&nbsp One paper accepted by ECCV '22 Hi Israel!! 🎉✡️<br>
               <b>06.2022</b>&nbsp&nbsp I attended CVPR 22 in person and got covid 😕 <br>
@@ -119,7 +119,7 @@
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
               <div class="one">
-                  <img src=''width="180%">
+                  <img src='imgs/acl23.png'width="180%">
               </div>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
