--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <heading><b>Publications</b></heading>
             </td>
           </tr>      
-          <!-- <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
+          <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
               <div class="one">
@@ -137,17 +137,17 @@
               <a href="https://rehg.org/">James Rehg<sup>&dagger;</sup></a>,
               <a href="https://cs.stanford.edu/~diyiy/">Diyi Yang<sup>&dagger;</sup></a>
               <br>
-              <em>ACL</em>, 2023 
+              <em>ACL Findings</em>, 2023 
               <br>
               <a href="https://persuasion-deductiongame.socialai-data.org">project</a> /
-              <a href="">paper</a> /
+              <a href="https://aps.arxiv.org/pdf/2212.08279">paper</a> /
               <a href="">bibtex</a>
               <br>
               <p></p>
               <p>
               </p>
             </td>
-          </tr>      -->
+          </tr>     
           <!-- <tr onmouseout="uflow_stop()" onmouseover="uflow_start()">
             <td style="padding:25px;width:35%;vertical-align:middle;display:inline-block;">
   
@@ -491,6 +491,7 @@
                 <img src="country/be.png" width="30" height="30" style="float:left">
                 <img src="country/es.png" width="30" height="30" style="float:left">
                 <img src="country/il.png" width="30" height="30" style="float:left">
+                <img src="country/qa.png" width="30" height="30" style="float:left">
               </p><br><br> 
               <li>I'm <b>Chinese</b> and if you wonder what's the correct pronunciation of my name (with the tones!), try to say the brand "<a href="https://www.google.com/search?q=givenchy+pronunciation+in+british+english">Givenchy</a>"in British accent 🤣</li>
               <li>I play the <b>piano</b> 🎹 & very into classical music</li>
