--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </script>
             </td>
             <td style="padding:20px;width:65%;vertical-align:middle">
-              <a href="TODO">
+              <a href="https://arxiv.org/abs/2312.12870">
                 <papertitle>The Audio-Visual Conversational Graph: From an Egocentric-Exocentric Perspective</papertitle>
               </a>
               <br>
@@ -157,7 +157,7 @@
               <em>(under review)</em> 
               <br>
               <a href="https://vjwq.github.io/AV-CONV/">project</a> /
-              <a href="TODO">arXiv </a> /
+              <a href="https://arxiv.org/pdf/2312.12870.pdf">paper </a> /
               <a><font color="#ABB0B8">code</font></a> /
               <a><font color="#ABB0B8">dataset</font></a> /
               <!-- <a href="TODO">paper </a> / -->
