--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section id="News" style="padding-top: 80px; margin-top: -80px;">
             <heading><b>News</b></heading>
             <p>
-              <b>12.2023</b>&nbsp&nbsp Check out my latest work <a href="https://vjwq.github.io/AV-CONV/">Audio-Visual Conversational Graph</a>! 🤹‍♀️<br>
+              <font color="#F00"><strong><b>12.2023</b>&nbsp&nbsp Check out my latest work</div> <a href="https://vjwq.github.io/AV-CONV/">Audio-Visual Conversational Graph</a>!</strong></font> 🤹‍♀️<br>
               <b>01.2023</b>&nbsp&nbsp I'll be interning at <a href="https://about.meta.com/realitylabs/">Meta Reality Labs</a> in summer 2023! ♾️👩‍💻<br>
               <!-- <b>10.2022</b>&nbsp&nbsp I attended ECCV 22 in person @ Tel-Aviv, Israel. Had so much fun in the Dead Sea! 🌊<br> -->
               <!-- <b>10.2022</b>&nbsp&nbsp I give a poster presentation at <a href="https://sites.google.com/view/egocentric-hand-body-activity">HBHA@ECCV22 workshop</a>, thanks for having me! 😊<br>
